--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,2 @@
-# MONGO_URI=<enter-MONGO_URI>
-# JWT_SECRET=<enter-secret>
-
-MONGO_URI=mongodb+srv://Kushal_EMS:Kushal%402504@cluster0.k78e6bu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=Kushal@secretEMS
+MONGO_URI=<enter-MONGO_URI>
+JWT_SECRET=<enter-secret>
